Настроен шаблон AdminLTE

--- a/public/composer.json
+++ b/public/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "almasaeed2010/adminlte": "~2.0"
+        "almasaeed2010/adminlte": "~2.0",
+        "scrivo/highlight.php": "8.*",
+        "aak74/bitrix": "dev-master"
     }
 }
